Filtro de Transações

--- a/src/main/webapp/paginas/caixa/caixa.html
+++ b/src/main/webapp/paginas/caixa/caixa.html
@@ -6,6 +6,7 @@
                 <form name="CaixaForm">
                     <label>Caixa:</label>
                     <input required type="text" class="form-control" ng-model="entidade.nome"/>
+                    <h1>{{entidade.nome}}</h1>
                     <p ng-show="!entidade.nome" class="text text-danger">Digite um nome</p>
                 </form>
             </div>
