--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -13,6 +13,8 @@ and open the template in the editor.
         <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.0/angular-ui-router.min.js"></script>
         <script src="paginas/home/home.js"></script>
         <script src="paginas/caixa/caixa.js"></script>
+        <script src="paginas/categoria/categoria.js"></script>
+        <script src="paginas/fisica/fisica.js"></script>
         <script src="app.js"></script>
         
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
@@ -36,6 +38,8 @@ and open the template in the editor.
                     <ul class="nav navbar-nav">
                         <li class="active"><a ui-sref="home">Pagina inicial <span class="sr-only">(current)</span></a></li>
                         <li><a ui-sref="caixalistagem">Caixa</a></li>
+                        <li><a ui-sref="categorialistagem">Categoria</a></li>
+                        <li><a ui-sref="fisicalistagem">Categoria</a></li>
                         
                     </ul>
                 </div><!-- /.navbar-collapse -->
