--- a/src/main/webapp/paginas/fisica/fisica.html
+++ b/src/main/webapp/paginas/fisica/fisica.html
@@ -10,6 +10,12 @@
                     <input required type="text" class="form-control" ng-model="entidade.email"/>
                     <label>CPF:</label>
                     <input required type="text" class="form-control" ng-model="entidade.cpf"/>
+                    <label>Nome</label>
+                    <input required type="text" class="form-control"  ng-model="entidade.nome"/> </br>
+                    <label>E-mail</label>
+                    <input required type="email" class="form-control" ng-model="entidade.email"/> </br>
+                    <label>CPF</label>
+                    <input required type="number" class="form-control" ng-model="entidade.cpf" placeholder="000.000.000-00"/>
                 </form>
             </div>
         </div>
