--- a/src/main/webapp/paginas/juridica/juridica.html
+++ b/src/main/webapp/paginas/juridica/juridica.html
@@ -1,4 +1,4 @@
-<h1 align="center">Cadastro de Pessoa Jurídica</h1>
+<h1 align="center">Cadastro de Pessoa Juridica</h1>
 <div class="col-md-6">
     <div class="panel panel-default">
         <div class="panel-body">
@@ -10,6 +10,13 @@
                     <input required type="text" class="form-control" ng-model="entidade.email"/>
                     <label>CNPJ:</label>
                     <input required type="text" class="form-control" ng-model="entidade.cnpj"/>
+                    <label>Pessoa Juridica:</label>
+                    <input required type="text" class="form-control" ng-model="entidade.nome"/>
+                    <p ng-show="!entidade.nome" class="text text-danger">Digite um nome</p>
+                    <input required type="text" class="form-control" ng-model="entidade.email"/>
+                    <p ng-show="!entidade.email" class="text text-danger">Digite um email</p>
+                    <input required type="text" class="form-control" ng-model="entidade.cnpj"/>
+                    <p ng-show="!entidade.cnpj" class="text text-danger">Digite um cnpj</p>
                 </form>
             </div>
         </div>
