--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -22,6 +22,10 @@
         <script src="app.js"></script>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
               integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+        <script src="paginas/juridica/juridica.js"></script>
+        <!--<script src="paginas/categoria/movimentocaixa.js"></script>-->
+        <script src="app.js"></script>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     </head>
     <body >
         <nav class="navbar navbar-default">
@@ -53,7 +57,7 @@
                         <li><a ui-sref="saldolistagem">Saldo</a></li>
                         <li><a ui-sref="tipoTitulolistagem">Tipo de Titulo</a></li>
                         <li><a ui-sref="titulolistagem">Titulo</a></li>
-
+                        <li><a ui-sref="juridicalistagem">Pessoa Juridica</a></li>
                     </ul>
                 </div><!-- /.navbar-collapse -->
             </div><!-- /.container-fluid -->
