--- a/src/main/webapp/paginas/categoria/listar.html
+++ b/src/main/webapp/paginas/categoria/listar.html
@@ -6,6 +6,7 @@
             <tr>
                 <td>Nome</td>
                 <td>Opcões</td>
+                <td>Opcoes</td>
             </tr>
             <tr ng-repeat="categoria in dados">
                 <td>{{categoria.nome}}</td>
