--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -13,6 +13,7 @@
         <script src="paginas/caixa/caixa.js"></script>
         <script src="paginas/categoria/categoria.js"></script>
         <script src="paginas/juridica/juridica.js"></script>
+        <script src="paginas/formaPagamento/formaPagamento.js"></script>
         <!--<script src="paginas/categoria/movimentocaixa.js"></script>-->
         <script src="app.js"></script>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
@@ -38,6 +39,7 @@
                         <li><a ui-sref="caixalistagem">Caixa</a></li>
                         <li><a ui-sref="categorialistagem">Categoria</a></li>
                         <li><a ui-sref="juridicalistagem">Pessoa Juridica</a></li>
+                        <li><a ui-sref="categorialistagem">Formas de Pagamento</a></li>
 
                     </ul>
                 </div><!-- /.navbar-collapse -->
